Update navigation to instead use the Sheet component. Fix bug that added horizontal scrollbar on some browsers.

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -2,8 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-nav { z-index: 100; }
-
 /* Prevent mobiles from zooming when entering data */
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
   select:focus,
