--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,10 +4,14 @@
   height: 100%;
   width: 100%;
   min-height: 100vh;
-  min-width: 100vw;
+  max-width: 100vw;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
+}
+
+#logo:hover {
+  background-color: unset;
 }
 
 a {
